test/fail/transform/constantFolding/test.twge
def testInt(v) : actions {
    actorTalk(duration = v);
}

block init {
    actions {
        testInt(true + "string");
        testInt(3 * true);
        testInt(v = tmp);
    }
}